--- a/resources/reimbursement-claims/view/reimbursement-processing.html
+++ b/resources/reimbursement-claims/view/reimbursement-processing.html
@@ -2,7 +2,7 @@
 <span ui-sref="user-assignment({ param: 'reimburs' })" class="navbar-brand p-0 m-0"><i class="fa fa-arrow-left" style="cursor:pointer"></i>&nbsp;&nbsp;Reimbursement Claims : Processing</span>
 </nav>
 <section id="reimbursment">
-    <div class="leftContainer" style="height:100%">
+    <div class="leftContainer">
         <div class="row m-0">
             <div class="leftContentPart float-left pl-0" id="detailAccWrap" ng-class="{'detailAccWrapClose' : !infoToggle}">
                 <div id="detailAcc">
